<resources>
    <string name="app_name">Project1</string>
    <string name="edt_user">User name</string>
    <string name="edt_passwords">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Signup</string>
    <string name="User_name_edt">User Name</string>
    <string name="password_edt_sg">Password</string>
    <string name="retype_edt">Retype Password</string>
    <string name="email_edt">Email</string>
    <string name="Phone_edt">Phone</string>
    <string name="Sign_me_btn">Sign me up!</string>
    <string name="nameerror">Invalid username</string>
    <string name="passerror">Invalid password</string>
    <string name="repasserror">Passwords do not match</string>
    <string name="emailerror">Invalid email</string>
    <string name="phoneerror">Invalid phone number</string>
</resources>